Auto-launch VLC on startup
